--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
         <div>
             <a href="/montadoras_list">Lista de Montadoras</a>
             <a href="/montadoras_form">Nova Montadora</a>
+            <a href="/montadora_save_txt">Salvar em Arquivo</a>
         </div>
     </div>
 
