--- a/templates/montadora_form.html
+++ b/templates/montadora_form.html
@@ -2,13 +2,19 @@
 
 {% block title %} Nova Montadora {% endblock %}
 
-{% block title_page %} {% if montadora %} Editar Montadora {% else %} Nova Montadora {% endif %} {% endblock %}
+{% block title_page %} 
+  {% if montadora %} 
+    Editar Montadora 
+  {% else %} 
+    Nova Montadora 
+  {% endif %} 
+{% endblock %}
 
 {% block content %}
-  <form action="{% if montadora %} /montadora_update/{{ montadora.id }} {% else %} /montadora_save {% endif %}" method="post">
-    <input type="text" name="nome" placeholder="Nome da Montadora" value="{{ montadora.nome if montadora else '' }}">
-    <input type="text" name="pais" placeholder="País" value="{{ montadora.pais if montadora else '' }}">
-    <input type="text" name="ano" placeholder="Ano Fundação" value="{{ montadora.ano_fundacao if montadora else '' }}">
-    <input type="submit" value="{% if montadora %} Atualizar Montadora {% else %} Salvar Montadora {% endif %}" />
-  </form>
+<form action="{% if montadora %} /montadora_update/{{ montadora.id }} {% else %} /montadora_save {% endif %}" method="post">
+  <input class="form-control" type="text" name="nome" placeholder="Nome da Montadora" value="{{ montadora.nome if montadora else '' }}">
+  <input class="form-control" type="text" name="pais" placeholder="País" value="{{ montadora.pais if montadora else '' }}">
+  <input class="form-control" type="number" name="ano" placeholder="Ano Fundação" value="{{ montadora.ano_fundacao if montadora else '' }}">
+  <input class="form-control" type="submit" value="{% if montadora %} Atualizar Montadora {% else %} Salvar Montadora {% endif %}" />
+</form>
 {% endblock %}
