--- a/static/style.css
+++ b/static/style.css
@@ -1,29 +1,25 @@
-/* Estilo geral */
 body {
-    background-color: #2c2c2c; /* Fundo escuro */
-    color: #ffffff; /* Texto claro para contraste */
+    background-color: #2c2c2c;
+    color: #ffffff;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
 }
 
-/* Barra de navegação superior */
 .navbar {
-    background-color: #000000; /* Barra preta */
+    background-color: #000000;
     padding: 1em;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-/* Título no centro */
 .navbar h1 {
     color: #ffffff;
     font-size: 24px;
     margin: 0;
 }
 
-/* Links da barra */
 .navbar a {
     color: #ffffff;
     text-decoration: none;
@@ -31,14 +27,13 @@ body {
 }
 
 .navbar a:hover {
-    color: #f0a500; /* Cor de destaque ao passar o mouse */
+    color: #f0a500;
 }
 
 .container {
     margin: 20px;
 }
 
-/* Botões */
 button {
     background-color: #f0a500;
     color: #000000;
@@ -51,17 +46,15 @@ button:hover {
     background-color: #ffaa00;
 }
 
-/* Adiciona bordas arredondadas e espaço entre botões */
 button {
-    border-radius: 10px; /* Borda arredondada */
-    margin: 5px 0; /* Espaço vertical */
-    padding: 10px 15px; /* Espaçamento interno dos botões */
+    border-radius: 10px; 
+    margin: 5px 0;
+    padding: 10px 15px;
 }
 
-/* Ajuste adicional para o botão de deletar, se necessário */
 form {
-    display: inline; /* Para que o botão de deletar fique ao lado do botão de editar */
-    margin-left: 5px; /* Espaço entre editar e deletar */
+    display: inline; 
+    margin-left: 5px;
 }
 
 
@@ -70,4 +63,42 @@ form input[type="text"], form input[type="submit"] {
     padding: 10px;
     border-radius: 5px;
     border: 1px solid #dddddd;
+}
+
+.form-control {
+    margin: 5px 0; 
+    padding: 10px; 
+    border-radius: 5px; 
+    border: 1px solid #dddddd;
+    width: calc(100% - 22px); 
+}
+
+form input[type="submit"] {
+    background-color: #f0a500;
+    color: #000000;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+    padding: 10px 15px;
+    margin-top: 10px; 
+}
+
+form input[type="submit"]:hover {
+    background-color: #ffaa00;
+}
+
+.status {
+    background-color: #444444; 
+    border-radius: 5px; 
+    padding: 15px;
+    margin-top: 20px;
+    color: #f0a500;
+}
+
+.status h3 {
+    margin: 0 0 10px 0; 
+}
+
+.status p {
+    margin: 0;
 }
