--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,3 @@
-/* Reset básico */
 * {
     margin: 0;
     padding: 0;
@@ -7,21 +6,20 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #2c3e50; /* Fundo escuro */
-    color: #ecf0f1; /* Texto claro */
+    background-color: #2c3e50;
+    color: #ecf0f1;
 }
 
 .navbar {
     display: flex;
-    align-items: center; /* Alinha título verticalmente */
-    justify-content: flex-start; /* Alinha itens à esquerda */
+    align-items: center; 
+    justify-content: space-between;
     padding: 1rem;
-    background-color: #1abc9c; /* Verde água */
+    background-color: #1abc9c; 
 }
 
-.navbar h1 {
-    color: white;
-    margin-left: 1rem; /* Espaçamento à esquerda do título */
+.navbar nav {
+    margin-left: auto;
 }
 
 .navbar nav a {
@@ -29,6 +27,7 @@ body {
     margin: 0 1rem;
     text-decoration: none;
 }
+
 
 .container {
     max-width: 1200px;
@@ -39,17 +38,18 @@ body {
 .filter-section {
     margin-bottom: 2rem;
     display: flex;
-    align-items: center; /* Alinha os itens do formulário verticalmente */
+    align-items: center; 
+    flex-wrap: wrap; 
 }
 
 .filter-form {
     display: flex;
-    align-items: center; /* Alinha os itens do formulário verticalmente */
-    margin-right: 1rem; /* Espaço à direita para afastar do botão */
+    align-items: center; 
+    margin-right: 1rem; 
 }
 
 .btn-add {
-    background-color: #1abc9c; /* Verde água */
+    background-color: #1abc9c; 
     color: white;
     border: none;
     border-radius: 5px;
@@ -59,20 +59,20 @@ body {
 }
 
 .btn-add:hover {
-    background-color: #16a085; /* Verde escuro */
-    margin-left: 0.5rem; /* Espaço à esquerda para destacar ao passar o mouse */
+    background-color: #16a085;
+    margin-left: 0.5rem;
 }
 
 .form-control {
     padding: 0.5rem;
-    border: 1px solid #34495e; /* Cinza mais escuro */
+    border: 1px solid #34495e;
     border-radius: 5px;
-    margin: 0 0.5rem; /* Reduzir o espaçamento entre os campos de filtro */
-    width: 200px; /* Ajuste a largura conforme necessário */
+    margin: 0 0.5rem;
+    width: 200px; 
 }
 
 .btn {
-    background-color: #16a085; /* Verde escuro */
+    background-color: #16a085;
     color: white;
     border: none;
     border-radius: 5px;
@@ -82,7 +82,7 @@ body {
 }
 
 .btn:hover {
-    background-color: #149174; /* Verde mais escuro */
+    background-color: #149174;
 }
 
 .status {
@@ -90,17 +90,17 @@ body {
 }
 
 .form-section {
-    margin: 2rem 0; /* Espaçamento vertical para a seção do formulário */
+    margin: 2rem 0; 
 }
 
 .montadoras-container, .models-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 1.5rem; /* Espaçamento entre os cartões */
+    gap: 1.5rem;
 }
 
 .montadora-card, .model-card {
-    background-color: #34495e; /* Cinza claro */
+    background-color: #34495e;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     padding: 1.5rem;
@@ -112,7 +112,7 @@ body {
 }
 
 .montadora-link, .model-link {
-    color: #1abc9c; /* Verde água */
+    color: #1abc9c; 
     text-decoration: none;
 }
 
@@ -122,27 +122,56 @@ body {
 
 .button-group {
     display: flex;
-    gap: 1rem; /* Espaçamento entre os botões */
+    gap: 1rem; 
 }
 
 .btn-edit {
-    background-color: #1abc9c; /* Verde água */
+    background-color: #1abc9c;
 }
 
 .btn-delete {
-    background-color: #e74c3c; /* Vermelho */
+    background-color: #e74c3c;
 }
 
 .btn-edit:hover {
-    background-color: #16a085; /* Verde escuro */
+    background-color: #16a085; 
 }
 
 .btn-delete:hover {
-    background-color: #c0392b; /* Vermelho escuro */
+    background-color: #c0392b; 
+}
+
+.vehicle-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 1.5rem; 
+}
+
+.vehicle-card {
+    background-color: #34495e; 
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    padding: 1.5rem;
+    transition: transform 0.2s;
+}
+
+.vehicle-card:hover {
+    transform: translateY(-5px);
+}
+
+.vehicle-info p {
+    margin: 0.5rem 0;
+}
+
+.vehicle-card h3 {
+    font-size: 1.5rem;
+    color: #1abc9c; 
+    margin-bottom: 1rem;
+    text-align: left;
 }
 
 footer {
-    background-color: #1abc9c; /* Verde água */
+    background-color: #1abc9c; 
     color: white;
     padding: 1rem;
     text-align: center;
